Solved the issue of making the contact form responsive on small screens with large fonts, used vw for form width.

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,3 +1,7 @@
+.about {
+    padding: 0px 1em 1em;
+}
+
 .header {
     display: flex;
     justify-content: center;
